# front2back

./: .aider.conf.yml  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
.gemini/: .env.example
.ideas/: CLAUDE_OPUS_4.md  CLAUDE_SONNET_4_5.md  GEMINI_2_5_PRO.md  GPT_5.md
backend/: Dockerfile  README.md  init_db.sql  main.py  pyproject.toml
frontend/: Dockerfile  README.md  package.json
